--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.5.3",
+    "geolib": "^3.3.3",
+    "mapbox-gl": "^2.7.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-map-gl": "^7.0.10"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
